--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_eb6eb26fba1d_key -iv $encrypted_eb6eb26fba1d_iv
     -in travis_deploy_rsa.enc -out travis_deploy_rsa -d
   - eval "$(ssh-agent -s)"
-  - chmod 600 ./deploy_key
+  - chmod 600 ./travis_deploy_rsa
   - echo -e "Host $SERVER_IP\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - ssh-add ./travis_deploy_rsa
