--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@influxdata/influxdb-client": "^1.1.0",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "country-code-lookup": "0.0.17",
     "csv-parser": "^2.3.2",
     "csvparser": "^0.1.4",
     "csvtojson": "^2.0.10",
