--- a/data/grafana/provisioning/dashboards/all.yml
+++ b/data/grafana/provisioning/dashboards/all.yml
@@ -4,3 +4,10 @@
   type: "file" # type of dashboard description (json files)
   options:
     folder: "/var/lib/grafana/dashboards"
+
+- name: "Australia" # name of this dashboard configuration (not dashboard itself)
+  org_id: 1 # id of the org to hold the dashboard
+  folder: "Australia" # name of the folder to put the dashboard (http://docs.grafana.org/v5.0/reference/dashboard_folders/)
+  type: "file" # type of dashboard description (json files)
+  options:
+    folder: "/var/lib/grafana/dashboards/Australia"
