--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,9 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
     "influx": "^5.5.1",
+    "latlon-geohash": "^2.0.0",
     "moment": "^2.24.0",
+    "ngeohash": "^0.6.3",
     "node-schedule": "^1.3.2"
   },
   "devDependencies": {
