--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "delay": "2500"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.6.1",
     "@influxdata/influxdb-client": "^1.1.0",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
@@ -29,7 +30,9 @@
     "latlon-geohash": "^2.0.0",
     "moment": "^2.24.0",
     "ngeohash": "^0.6.3",
-    "node-schedule": "^1.3.2"
+    "node-schedule": "^1.3.2",
+    "winston": "^3.2.1",
+    "winston-elasticsearch": "^0.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
