--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,29 @@ services:
       KAPACITOR_LOGGING_LEVEL: "info"
     depends_on:
       - influxdb
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
+    container_name: elasticsearch
+    ports:
+      - 9200:9200
+      - 9300:9300
+    volumes:
+      - ./data/kapacitor:/var/lib/kapacitor
+      - ./data/elasticsearch/data:/usr/share/elasticsearch/data
+    environment:
+      discovery.type: "single-node"
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.6.1
+    container_name: kibana
+    ports:
+      - 5601:5601
+    # volumes:
+    #   - ./data/kibana.config/kibana.yml:/usr/share/kibana/config/kibana.yml
+    environment:
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+    links:
+      - elasticsearch
+
   job_runner:
     build: .
     container_name: job_runner
@@ -65,8 +88,10 @@ services:
       - run
       - dev
     environment:
-      SCHEDULE_CRON: "*/5 * * * *"
+      SCHEDULE_CRON: "*/15 * * * *"
       INFLUXDB_HOST: "influxdb"
+      ELASTICSEARCH_URL: "http://elasticsearch:9200"
     depends_on:
       - influxdb
+      - elasticsearch
     restart: always
