--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,7 @@
     "latlon-geohash": "^2.0.0",
     "moment": "^2.24.0",
     "ngeohash": "^0.6.3",
-    "node-schedule": "^1.3.2",
+    "node-cron": "^2.0.3",
     "winston": "^3.2.1",
     "winston-elasticsearch": "^0.8.5"
   },
