--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "country-code-lookup": "0.0.17",
+    "cron": "^1.8.2",
     "csv-parser": "^2.3.2",
     "csvparser": "^0.1.4",
     "csvtojson": "^2.0.10",
@@ -30,7 +31,6 @@
     "latlon-geohash": "^2.0.0",
     "moment": "^2.24.0",
     "ngeohash": "^0.6.3",
-    "node-cron": "^2.0.3",
     "winston": "^3.2.1",
     "winston-elasticsearch": "^0.8.5"
   },
