--- a/app/package.json
+++ b/app/package.json
@@ -32,7 +32,8 @@
     "moment": "^2.24.0",
     "ngeohash": "^0.6.3",
     "winston": "^3.2.1",
-    "winston-elasticsearch": "^0.8.5"
+    "winston-elasticsearch": "^0.8.5",
+    "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
